fix: Corretto il comando CMD nel Dockerfile per evitare problemi di build e la tabella composizione menu fisso

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,4 +28,4 @@ RUN go install github.com/githubnemo/CompileDaemon@latest
 # Espone la porta
 EXPOSE 8080
 
-CMD ["CompileDaemon", "--build=go build -o main .", "--command=./main"]
+CMD ["CompileDaemon", "--build=go build -buildvcs=false -o main .", "--command=./main"]
